deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social-backend-deployment
  labels:
    app: social-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: social-backend
  template:
    metadata:
      labels:
        app: social-backend
    spec:
      containers:
        - name: social-backend
          image: social-users:0.0.2
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: social-backend-service
spec:
  selector:
    app: social-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---

kind: Service
apiVersion: v1
metadata:
  name: postgres
  namespace: default
spec:
  type: ExternalName
  externalName: host.docker.internal
  ports:
    - name: port
      port: 5432
