deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social-frontend-deployment
  labels:
    app: social-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: social-frontend
  template:
    metadata:
      labels:
        app: social-frontend
    spec:
      containers:
        - name: social-frontend
          image: social-frontend:0.0.2
          ports:
            - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: social-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: social-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30000
